Fix layout problem of first card

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,17 +17,11 @@
 	filter: drop-shadow(0 1px 2px $color-box-shadow);
 	border-radius: $border-radius;
 	overflow: hidden;
-	height: 320px;
-	width: 250px;
-	margin-bottom: 16px;
-}
-
-.element-container-2,
-.element-container-3,
-.element-container-4,
-.element-container-empty {
 	position: absolute;
 	margin-top: -77px;
+	margin-bottom: 16px;
+	height: 320px;
+	width: 250px;
 }
 
 .element-container-2,
@@ -92,6 +86,11 @@
 	padding-left: 32px;
 	background-position: 12px 2px;
 	opacity: .5;
+}
+
+.action-container {
+	position: absolute;
+	margin-top: 350px;
 }
 
 .action-keep,
